2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/wapbox.c: Converted to use bearerbox communication stuff
	from gw/shared.c (and therefore Connection) instead of using
	old plain socket stuff. Among other things, this kills one thread
	(empty_queue_thread).
	
	* gw/shared.c: Check for write errors and don't report messages
	that were sent.

	* checks/check_fakewap.sh: Set log level to 0 and shorten sleeps
	between box startups.
	
	* gw/smsbox.c: Don't use \0 in format string, use %c and argument
	0 instead. \0 has a tendency to cut C strings short...

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/shared.[ch]: Moved bearerbox communication stuff from
	smsbox.c to shared.c, so that it can easily be used by wapbox
	as well.
	
	* gw/smsbox.c: Related changes.
	
	* gw/wapbox.c: Renamed "running" to "running_ok", until the
	wapbox will use program_status from shared.c.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc.c: Removed calls to str_find_substr.
	
	* gwlib/utils.[ch]: Removed now-unused str_find_substr function.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gw/urltrans.[ch]: Removed urltrans_accepted_smsc(), since
	it wasn't being used. Made the accepted SMSC list in an
	URLTranslation be a List. This allows us to kill one more call
	to str_find_substr.
	
	* gwlib/octstr.[ch]: Wrote octstr_item_match.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.[ch]: Wrote octstr_split.
	
	* gw/urltrans.c: Use a Dict to look up the URLTranslation,
	instead of a linear search from the whole list. This is somewhat
	faster and results in cleaner code.

2000-12-05  Lars Wirzenius  <liw@iki.fi>

	* gwlib/gwstr.[ch], gwlib/conffile.c: Moved trim_ends to
	conffile.c, and the other functions were no longer used, so
	removed the gwstr module.
	
	* gwlib/gwlib.h, gwlib/socket.h: Removed include for gwstr.h.

2000-12-04  Lars Wirzenius  <liw@iki.fi>

    	* gw/urltrans.c: Made urltrans_get_pattern return an Octstr, instead
	of a C string.
