@@ -105,12 +105,20 @@ enum { CATENATE_UDH_LEN = 5 };
 static Counter *catenated_sms_counter;
 
 
-static void prepend_catenation_udh(Msg *sms, int part_no, int num_messages,
-    	    	    	    	   int msg_sequence)
+static void prepend_catenation_udh(Msg *sms, int msg_sequence, int num_messages,
+    	    	    	    	   int part_no )
 {
     gw_assert(sms->sms.udhdata != NULL);
+    if (octstr_len(sms->sms.udhdata) == 0) {
+	octstr_append_char(sms->sms.udhdata, CATENATE_UDH_LEN);
+    }
     octstr_format_append(sms->sms.udhdata, "%c\3%c%c%c", 
-    	    	    	 0, part_no, num_messages, msg_sequence);
+    	    	    	 0, msg_sequence, num_messages, part_no);
+
+    /* Now that we added the concatenation information the
+     * length is all wrong. we need to recalculate it. */
+    octstr_set_char(sms->sms.udhdata, 0, octstr_len(sms->sms.udhdata) - 1 );
+    
     sms->sms.flag_udh = 1;
 }
 
@@ -153,22 +161,21 @@ static Octstr *extract_msgdata_part(Octstr *msgdata, Octstr *split_chars,
  * It is an error to use catenation and UDH together, or catenation and 7
  * bit mode toghether; in these cases, catenation is silently ignored.
  * 
- * If `catenate' is true, it is used as the sequence number for the logical
- * message. The catenation UDH contain three numbers: the sequence number
- * of the part in the logical (unsplit) message, the total number of parts
- * in the logical message, and the sequence number of the logical message
- * itself, in case we're sending several large logical messages to the
- * same recipient. The first two can be generated by sms_split itself,
- * and `catenate' is used as the third one.
+ * If `catenate' is true, catref is used as the sequence number for the logical
+ * message. The catenation UDH contain three numbers: the concatenated
+ * message reference, which is constant for all parts of the logical message,
+ * the total number of parts in the logical message, and the sequence number
+ * of the current part.
  *
- * Note that `catenate' must have a value in the range 0..255.
+ * Note that `catref' must have a value in the range 0..255.
  * 
  * `max_octets' gives the maximum number of octets in on message, including
  * UDH, and after 7 bit characters have been packed into octets.
  */
 static List *sms_split(Msg *orig, Octstr *header, Octstr *footer, 
 		       Octstr *nonlast_suffix, Octstr *split_chars, 
-		       int catenate, int max_messages, int max_octets)
+		       int catenate, int catref, int max_messages,
+		       int max_octets)
 {
     long max_part_len;
     long i, num_messages;
@@ -176,9 +183,14 @@ static List *sms_split(Msg *orig, Octstr *header, Octstr *footer,
     Msg *part;
     Octstr *msgdata;
 
+
+
+#if 0
     /* Forget about catenation, if `orig' has UDH. */
+    /* W H Y ? ? ?   -- Yann (removed until I understand it) */
     if (catenate && (orig->sms.flag_udh || !orig->sms.flag_8bit))
     	catenate = 0;
+#endif
 
     /* Compute maximum number of unpacked octets in each part. */
     if (orig->sms.flag_8bit)
@@ -188,8 +200,11 @@ static List *sms_split(Msg *orig, Octstr *header, Octstr *footer,
     max_part_len -= octstr_len(header) + octstr_len(footer);
     if (orig->sms.flag_udh)
     	max_part_len -= octstr_len(orig->sms.udhdata);
-    if (catenate)
+    if (catenate) {
         max_part_len -= CATENATE_UDH_LEN;
+        if (!orig->sms.flag_udh)
+            max_part_len--; /* -1 for the lenght of the UDH */
+    }
 
     /* Compute the number of output messages. */
     num_messages = roundup_div(octstr_len(orig->sms.msgdata), max_part_len);
@@ -212,7 +227,7 @@ static List *sms_split(Msg *orig, Octstr *header, Octstr *footer,
 	    octstr_append(part->sms.msgdata, nonlast_suffix);
 	
 	if (catenate)
-	    prepend_catenation_udh(part, i+1, num_messages, catenate);
+	    prepend_catenation_udh(part, catref, num_messages, i+1);
 	
 	list_append(list, part);
     }
@@ -231,7 +246,7 @@ static int send_message(URLTranslation *trans, Msg *msg)
 {
     int max_msgs;
     Octstr *header, *footer, *suffix, *split_chars;
-    int catenate;
+    int catenate, catref;
     List *list;
     Msg *part;
     static char *empty = "<Empty reply from service provider>";
@@ -275,10 +290,10 @@ static int send_message(URLTranslation *trans, Msg *msg)
     }
 
     if (catenate)
-    	catenate = counter_increase(catenated_sms_counter) & 0xFF;
+    	catref = counter_increase(catenated_sms_counter) & 0xFF;
 
     list = sms_split(msg, header, footer, suffix, split_chars, catenate,
-    	    	     max_msgs, sms_max_length);
+    	    	     catref, max_msgs, sms_max_length);
     msg_destroy(msg);
 
     while ((part = list_extract_first(list)) != NULL)
@@ -1038,8 +1053,9 @@ found:
     	goto error;
     
     msg->sms.udhdata = octstr_create("");
-    
-    octstr_append_from_hex(msg->sms.udhdata, "0504C34FC002");
+
+    /* UDH including the lenght (UDHL) */
+    octstr_append_from_hex(msg->sms.udhdata, "060504C34FC002");
     
     msg->sms.msgdata = octstr_create("");
     /* header for the data part of the message */
